fixing pari-mutuel desc text (min amount to wager wrap)

--- a/css/lobby.css
+++ b/css/lobby.css
@@ -341,13 +341,13 @@
     
     .contest_detail_table td:first-child {
         padding-right: 12px;
-        white-space: nowrap;
+        white-space: normal;
     }
     
     @media only screen and (max-width: 767px) {
         .contest_detail_table td:first-child {
             padding-right: 0;
-            width: 160px;
+            width: 110px;
         }
     }
     .contest_detail_table .payout_info_link {
